// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`regulatory-graph snapshot > CA LLC restaurant 6-15 1`] = `
[
  {
    "due_date": "2026-04-15",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "Federal Income Tax Return (Schedule C / 1040)",
    "occurrence_key": "2026",
    "rule_id": "federal-1040-schedule-c",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-01-31",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "Annual FUTA Tax Return (Form 940)",
    "occurrence_key": "2026",
    "rule_id": "federal-940-futa-annual",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-04-30",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Quarterly Payroll Tax Filing (Form 941)",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-941-quarterly-payroll",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-07-31",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Quarterly Payroll Tax Filing (Form 941)",
    "occurrence_key": "2026-Q3",
    "rule_id": "federal-941-quarterly-payroll",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-04-15",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q1",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-estimated-tax-q1",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-06-17",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q2",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-estimated-tax-q2",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-09-16",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q3",
    "occurrence_key": "2026-Q3",
    "rule_id": "federal-estimated-tax-q3",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q4",
    "occurrence_key": "2027-Q1",
    "rule_id": "federal-estimated-tax-q4",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-02-01",
    "frequency": "annual",
    "governing_agency": "OSHA (Federal / State)",
    "name": "OSHA 300 Log — Annual Summary Posting",
    "occurrence_key": "2027",
    "rule_id": "federal-osha-300-log-annual",
    "rule_version": 1,
    "severity_tier": "medium",
  },
  {
    "due_date": "2026-01-31",
    "frequency": "annual",
    "governing_agency": "IRS / SSA",
    "name": "W-2 / 1099 Filing Deadline",
    "occurrence_key": "2026",
    "rule_id": "federal-w2-1099-filing",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "biennial",
    "governing_agency": "State Health Department",
    "name": "Food Handler Certifications (Staff)",
    "occurrence_key": "2027",
    "rule_id": "industry-restaurant-food-handler-cert",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-07-15",
    "frequency": "annual",
    "governing_agency": "County Health Department",
    "name": "Food Service / Health Permit Renewal",
    "occurrence_key": "2026",
    "rule_id": "industry-restaurant-health-permit",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-02-20",
    "frequency": "monthly",
    "governing_agency": "CA Department of Revenue",
    "name": "State Sales Tax Filing — Monthly",
    "occurrence_key": "2026-02",
    "rule_id": "industry-restaurant-sales-tax-monthly",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-04-15",
    "frequency": "biennial",
    "governing_agency": "California Secretary of State",
    "name": "CA LLC Statement of Information",
    "occurrence_key": "2026",
    "rule_id": "state-ca-llc-statement-of-information",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-04-15",
    "frequency": "annual",
    "governing_agency": "California Franchise Tax Board (FTB)",
    "name": "California Minimum Franchise Tax ($800)",
    "occurrence_key": "2026",
    "rule_id": "state-ca-min-franchise-tax-800",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-04-30",
    "frequency": "quarterly",
    "governing_agency": "California EDD",
    "name": "California SDI / Payroll Tax Registration",
    "occurrence_key": "2026-Q2",
    "rule_id": "state-ca-sdi-payroll-registration",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-11-15",
    "frequency": "annual",
    "governing_agency": "CA Workers' Comp Board",
    "name": "Workers' Compensation Insurance Renewal",
    "occurrence_key": "2026",
    "rule_id": "state-workers-comp-renewal",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-12-15",
    "frequency": "annual",
    "governing_agency": "City / County Business Office",
    "name": "Business License Renewal",
    "occurrence_key": "2026",
    "rule_id": "universal-business-license-renewal",
    "rule_version": 1,
    "severity_tier": "medium",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "annual",
    "governing_agency": "CA Secretary of State",
    "name": "CA Annual Report / Entity Filing",
    "occurrence_key": "2027",
    "rule_id": "universal-state-annual-entity-filing",
    "rule_version": 1,
    "severity_tier": "high",
  },
]
`;

exports[`regulatory-graph snapshot > DE LLC other 1 1`] = `
[
  {
    "due_date": "2026-04-15",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "Federal Income Tax Return (Schedule C / 1040)",
    "occurrence_key": "2026",
    "rule_id": "federal-1040-schedule-c",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-04-15",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q1",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-estimated-tax-q1",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-06-17",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q2",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-estimated-tax-q2",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-09-16",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q3",
    "occurrence_key": "2026-Q3",
    "rule_id": "federal-estimated-tax-q3",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q4",
    "occurrence_key": "2027-Q1",
    "rule_id": "federal-estimated-tax-q4",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-06-01",
    "frequency": "annual",
    "governing_agency": "Delaware Division of Corporations",
    "name": "Delaware LLC Annual Tax",
    "occurrence_key": "2026",
    "rule_id": "state-de-llc-annual-tax-300",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-12-15",
    "frequency": "annual",
    "governing_agency": "City / County Business Office",
    "name": "Business License Renewal",
    "occurrence_key": "2026",
    "rule_id": "universal-business-license-renewal",
    "rule_version": 1,
    "severity_tier": "medium",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "annual",
    "governing_agency": "DE Secretary of State",
    "name": "DE Annual Report / Entity Filing",
    "occurrence_key": "2027",
    "rule_id": "universal-state-annual-entity-filing",
    "rule_version": 1,
    "severity_tier": "high",
  },
]
`;

exports[`regulatory-graph snapshot > FL C-Corp retail 1 1`] = `
[
  {
    "due_date": "2026-04-15",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "Federal Corporate Tax Return (Form 1120)",
    "occurrence_key": "2026",
    "rule_id": "federal-1120-ccorp-return",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-02-20",
    "frequency": "monthly",
    "governing_agency": "FL Department of Revenue",
    "name": "State Sales Tax Filing",
    "occurrence_key": "2026-02",
    "rule_id": "industry-retail-sales-tax-monthly",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "annual",
    "governing_agency": "FL Department of Revenue",
    "name": "Seller's Permit / Retail License Renewal",
    "occurrence_key": "2027",
    "rule_id": "industry-retail-sellers-permit",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-05-01",
    "frequency": "annual",
    "governing_agency": "Florida Division of Corporations (Sunbiz)",
    "name": "Florida Annual Report",
    "occurrence_key": "2026",
    "rule_id": "state-fl-annual-report",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-12-15",
    "frequency": "annual",
    "governing_agency": "City / County Business Office",
    "name": "Business License Renewal",
    "occurrence_key": "2026",
    "rule_id": "universal-business-license-renewal",
    "rule_version": 1,
    "severity_tier": "medium",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "annual",
    "governing_agency": "FL Secretary of State",
    "name": "FL Annual Report / Entity Filing",
    "occurrence_key": "2027",
    "rule_id": "universal-state-annual-entity-filing",
    "rule_version": 1,
    "severity_tier": "high",
  },
]
`;

exports[`regulatory-graph snapshot > NY LLC construction 31-50 contractors 1`] = `
[
  {
    "due_date": "2026-04-15",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "Federal Income Tax Return (Schedule C / 1040)",
    "occurrence_key": "2026",
    "rule_id": "federal-1040-schedule-c",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-01-31",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "1099-NEC Filing for Contractors",
    "occurrence_key": "2026",
    "rule_id": "federal-1099-nec-contractors",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-01-31",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "Annual FUTA Tax Return (Form 940)",
    "occurrence_key": "2026",
    "rule_id": "federal-940-futa-annual",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-04-30",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Quarterly Payroll Tax Filing (Form 941)",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-941-quarterly-payroll",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-07-31",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Quarterly Payroll Tax Filing (Form 941)",
    "occurrence_key": "2026-Q3",
    "rule_id": "federal-941-quarterly-payroll",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-04-15",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q1",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-estimated-tax-q1",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-06-17",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q2",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-estimated-tax-q2",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-09-16",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q3",
    "occurrence_key": "2026-Q3",
    "rule_id": "federal-estimated-tax-q3",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q4",
    "occurrence_key": "2027-Q1",
    "rule_id": "federal-estimated-tax-q4",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-02-01",
    "frequency": "annual",
    "governing_agency": "OSHA (Federal / State)",
    "name": "OSHA 300 Log — Annual Summary Posting",
    "occurrence_key": "2027",
    "rule_id": "federal-osha-300-log-annual",
    "rule_version": 1,
    "severity_tier": "medium",
  },
  {
    "due_date": "2026-01-31",
    "frequency": "annual",
    "governing_agency": "IRS / SSA",
    "name": "W-2 / 1099 Filing Deadline",
    "occurrence_key": "2026",
    "rule_id": "federal-w2-1099-filing",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "biennial",
    "governing_agency": "NY Contractors Licensing Board",
    "name": "Contractor License Renewal",
    "occurrence_key": "2027",
    "rule_id": "industry-construction-contractor-license",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "annual",
    "governing_agency": "Insurance Provider",
    "name": "Subcontractor COI Renewals",
    "occurrence_key": "2027",
    "rule_id": "industry-construction-subcontractor-coi",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2028-01-01",
    "frequency": "biennial",
    "governing_agency": "New York Department of State",
    "name": "New York LLC Biennial Statement",
    "occurrence_key": "2028",
    "rule_id": "state-ny-llc-biennial-statement",
    "rule_version": 1,
    "severity_tier": "medium",
  },
  {
    "due_date": "2026-11-15",
    "frequency": "annual",
    "governing_agency": "NY Workers' Comp Board",
    "name": "Workers' Compensation Insurance Renewal",
    "occurrence_key": "2026",
    "rule_id": "state-workers-comp-renewal",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-12-15",
    "frequency": "annual",
    "governing_agency": "City / County Business Office",
    "name": "Business License Renewal",
    "occurrence_key": "2026",
    "rule_id": "universal-business-license-renewal",
    "rule_version": 1,
    "severity_tier": "medium",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "annual",
    "governing_agency": "NY Secretary of State",
    "name": "NY Annual Report / Entity Filing",
    "occurrence_key": "2027",
    "rule_id": "universal-state-annual-entity-filing",
    "rule_version": 1,
    "severity_tier": "high",
  },
]
`;

exports[`regulatory-graph snapshot > NY sole prop healthcare 1 1`] = `
[
  {
    "due_date": "2026-04-15",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "Federal Income Tax Return (Schedule C / 1040)",
    "occurrence_key": "2026",
    "rule_id": "federal-1040-schedule-c",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-04-15",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q1",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-estimated-tax-q1",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-06-17",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q2",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-estimated-tax-q2",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-09-16",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q3",
    "occurrence_key": "2026-Q3",
    "rule_id": "federal-estimated-tax-q3",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q4",
    "occurrence_key": "2027-Q1",
    "rule_id": "federal-estimated-tax-q4",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2029-01-15",
    "frequency": "triennial",
    "governing_agency": "DEA",
    "name": "DEA Registration Renewal",
    "occurrence_key": "2029",
    "rule_id": "industry-healthcare-dea-registration",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "annual",
    "governing_agency": "HHS / OCR",
    "name": "HIPAA Security Risk Assessment",
    "occurrence_key": "2027",
    "rule_id": "industry-healthcare-hipaa-risk-assessment",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "biennial",
    "governing_agency": "NY Professional Licensing Board",
    "name": "Professional License Renewals",
    "occurrence_key": "2027",
    "rule_id": "industry-healthcare-professional-license",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-12-15",
    "frequency": "annual",
    "governing_agency": "City / County Business Office",
    "name": "Business License Renewal",
    "occurrence_key": "2026",
    "rule_id": "universal-business-license-renewal",
    "rule_version": 1,
    "severity_tier": "medium",
  },
]
`;

exports[`regulatory-graph snapshot > TX S-Corp construction 2-5 contractors 1`] = `
[
  {
    "due_date": "2026-01-31",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "1099-NEC Filing for Contractors",
    "occurrence_key": "2026",
    "rule_id": "federal-1099-nec-contractors",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-03-15",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "Federal Business Tax Return (Form 1120-S / 1065)",
    "occurrence_key": "2026",
    "rule_id": "federal-1120s-1065-return",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-01-31",
    "frequency": "annual",
    "governing_agency": "IRS",
    "name": "Annual FUTA Tax Return (Form 940)",
    "occurrence_key": "2026",
    "rule_id": "federal-940-futa-annual",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-04-30",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Quarterly Payroll Tax Filing (Form 941)",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-941-quarterly-payroll",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-07-31",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Quarterly Payroll Tax Filing (Form 941)",
    "occurrence_key": "2026-Q3",
    "rule_id": "federal-941-quarterly-payroll",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-04-15",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q1",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-estimated-tax-q1",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-06-17",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q2",
    "occurrence_key": "2026-Q2",
    "rule_id": "federal-estimated-tax-q2",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-09-16",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q3",
    "occurrence_key": "2026-Q3",
    "rule_id": "federal-estimated-tax-q3",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "quarterly",
    "governing_agency": "IRS",
    "name": "Federal Estimated Tax Payment — Q4",
    "occurrence_key": "2027-Q1",
    "rule_id": "federal-estimated-tax-q4",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-01-31",
    "frequency": "annual",
    "governing_agency": "IRS / SSA",
    "name": "W-2 / 1099 Filing Deadline",
    "occurrence_key": "2026",
    "rule_id": "federal-w2-1099-filing",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "biennial",
    "governing_agency": "TX Contractors Licensing Board",
    "name": "Contractor License Renewal",
    "occurrence_key": "2027",
    "rule_id": "industry-construction-contractor-license",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "annual",
    "governing_agency": "Insurance Provider",
    "name": "Subcontractor COI Renewals",
    "occurrence_key": "2027",
    "rule_id": "industry-construction-subcontractor-coi",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-05-15",
    "frequency": "annual",
    "governing_agency": "Texas Comptroller of Public Accounts",
    "name": "Texas Franchise Tax Report",
    "occurrence_key": "2026",
    "rule_id": "state-tx-franchise-tax-report",
    "rule_version": 1,
    "severity_tier": "high",
  },
  {
    "due_date": "2026-11-15",
    "frequency": "annual",
    "governing_agency": "TX Workers' Comp Board",
    "name": "Workers' Compensation Insurance Renewal",
    "occurrence_key": "2026",
    "rule_id": "state-workers-comp-renewal",
    "rule_version": 1,
    "severity_tier": "critical",
  },
  {
    "due_date": "2026-12-15",
    "frequency": "annual",
    "governing_agency": "City / County Business Office",
    "name": "Business License Renewal",
    "occurrence_key": "2026",
    "rule_id": "universal-business-license-renewal",
    "rule_version": 1,
    "severity_tier": "medium",
  },
  {
    "due_date": "2027-01-15",
    "frequency": "annual",
    "governing_agency": "TX Secretary of State",
    "name": "TX Annual Report / Entity Filing",
    "occurrence_key": "2027",
    "rule_id": "universal-state-annual-entity-filing",
    "rule_version": 1,
    "severity_tier": "high",
  },
]
`;
